# tracefork

./: .env.example  .firebaserc  .gitignore  PLAN.md  README.md  firebase.json  pyproject.toml  requirements.txt
api/: server.py
data/seeds/: batches.json  demo_scenarios.json  events.json  nodes.json  products.json  shipments.json
docs/: SETUP_FIREBASE_GITHUB.md  UI_UX_BRIEF.md
firebase/: firestore.indexes.json  firestore.rules
functions/: package-lock.json  package.json
functions/src/: agent.ts  fallback.ts  index.ts  tools.ts
mcp_server/: server.py
scripts/: capture_screenshots.mjs  generate_cover_image.py  run_scenario.py  seed_firestore.py  start-dev.bat
tests/: test_domain.py  test_scenarios.py
tests/scenarios/: scenario_01_happy_trace.yaml  scenario_02_recall.yaml  scenario_03_cold_chain.yaml  scenario_04_incomplete_trace.yaml  scenario_05_tamper.yaml
tracefork/: __init__.py  __main__.py  cli.py  cold_chain.py  compliance.py  config.py  firebase_client.py  integrity.py  recall.py  repository.py  service.py  trace.py
tracefork/agents/: orchestrator.py  tools.py
web-app/: index.html  package-lock.json  package.json  vite.config.ts
web-app/src/: App.tsx  index.css
web-app/src/api/: client.ts  types.ts
web-app/src/components/: ComplianceRing.tsx  Footer.tsx  Icon.tsx  Layout.tsx  LoadingState.tsx  LotSelector.tsx  SupplyChainGraph.tsx  ThemeToggle.tsx
web-app/src/context/: LotContext.tsx  ThemeContext.tsx
web-app/src/firebase/: config.ts
web-app/src/pages/: AgentPage.tsx  ColdChainMonitor.tsx  CommandCenter.tsx  DemoScenarios.tsx  (+2 more)
(+15 files in other folders)
