[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracefork"
version = "0.2.0"
description = "Food supply chain traceability & recall simulation (Kaggle Capstone)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "firebase-admin>=6.6.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[project.scripts]
tracefork = "tracefork.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracefork*"]
